<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_back"
        app:navigationContentDescription="@string/ynotify_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/yui_screen_horizontal"
        android:paddingTop="@dimen/yui_control_gap">

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_ignore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ynotify_pause_app" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_redact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ynotify_metadata_only" />
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/yui_control_gap"
            app:singleSelection="true"
            app:selectionRequired="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_all"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ynotify_filter_all"
                android:checked="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_notification"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ynotify_filter_notification" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_toast"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ynotify_filter_toast" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_dialog"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ynotify_filter_dialog" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_popup"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ynotify_filter_popup" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_snackbar"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ynotify_filter_snackbar" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="@dimen/yui_screen_horizontal"
        android:clipToPadding="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear_app"
        style="@style/Widget.YUI.Button.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/yui_screen_horizontal"
        android:layout_marginBottom="@dimen/yui_section_gap"
        android:text="@string/ynotify_clear_app_history" />
</LinearLayout>
